--- a/DonationTracker/DonationTracker/Base.lproj/Main.storyboard
+++ b/DonationTracker/DonationTracker/Base.lproj/Main.storyboard
@@ -35,42 +35,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dd-LV-r9K">
-                                <rect key="frame" x="168" y="297" width="38" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="38" id="ek8-2Z-0dV"/>
-                                    <constraint firstAttribute="height" constant="30" id="ssS-6Q-oDM"/>
-                                </constraints>
-                                <state key="normal" title="Login"/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uYz-GW-YPC">
-                                <rect key="frame" x="159" y="358" width="57" height="30"/>
+                                <rect key="frame" x="205" y="421" width="57" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="57" id="3yz-dd-hej"/>
                                     <constraint firstAttribute="height" constant="30" id="Y5b-b6-b3v"/>
                                 </constraints>
                                 <state key="normal" title="Register"/>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nic-9B-H7D">
+                                <rect key="frame" x="62" y="141" width="250" height="167"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dd-LV-r9K">
+                                <rect key="frame" x="116" y="421" width="38" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="38" id="ek8-2Z-0dV"/>
+                                    <constraint firstAttribute="height" constant="30" id="ssS-6Q-oDM"/>
+                                </constraints>
+                                <state key="normal" title="Login"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="4Dd-LV-r9K" secondAttribute="trailing" constant="169" id="0Dm-Kk-8zQ"/>
-                            <constraint firstItem="4Dd-LV-r9K" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="168" id="3Cn-UP-Abo"/>
-                            <constraint firstItem="4Dd-LV-r9K" firstAttribute="top" secondItem="VUw-jc-0yf" secondAttribute="top" constant="233" id="jIf-lH-SwQ"/>
-                            <constraint firstItem="uYz-GW-YPC" firstAttribute="top" secondItem="4Dd-LV-r9K" secondAttribute="bottom" constant="31" id="lIW-Lm-UmG"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="uYz-GW-YPC" secondAttribute="trailing" constant="159" id="o00-A2-Inb"/>
-                            <constraint firstItem="VUw-jc-0yf" firstAttribute="bottom" secondItem="uYz-GW-YPC" secondAttribute="bottom" constant="279" id="ohR-Al-poo"/>
-                            <constraint firstItem="uYz-GW-YPC" firstAttribute="top" secondItem="4Dd-LV-r9K" secondAttribute="bottom" constant="31" id="q6h-zg-TMo"/>
-                            <constraint firstItem="uYz-GW-YPC" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="159" id="qoL-9o-Xfk"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="4Dd-LV-r9K" secondAttribute="trailing" constant="221" id="0Dm-Kk-8zQ"/>
+                            <constraint firstItem="4Dd-LV-r9K" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="116" id="3Cn-UP-Abo"/>
+                            <constraint firstItem="uYz-GW-YPC" firstAttribute="top" secondItem="4Dd-LV-r9K" secondAttribute="bottom" constant="-30" id="lIW-Lm-UmG"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="trailing" secondItem="uYz-GW-YPC" secondAttribute="trailing" constant="113" id="o00-A2-Inb"/>
+                            <constraint firstItem="VUw-jc-0yf" firstAttribute="bottom" secondItem="uYz-GW-YPC" secondAttribute="bottom" constant="216" id="ohR-Al-poo"/>
+                            <constraint firstItem="uYz-GW-YPC" firstAttribute="top" secondItem="4Dd-LV-r9K" secondAttribute="bottom" constant="-30" id="q6h-zg-TMo"/>
+                            <constraint firstItem="uYz-GW-YPC" firstAttribute="leading" secondItem="VUw-jc-0yf" secondAttribute="leading" constant="205" id="qoL-9o-Xfk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="Donation Tracker" id="mOI-FS-AaM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="709" y="129"/>
+            <point key="canvasLocation" x="708" y="128.18590704647679"/>
         </scene>
         <!--RegisterScene-->
         <scene sceneID="cXR-EK-ajN">
@@ -669,10 +672,6 @@
                                 </constraints>
                                 <state key="normal" title="Login"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UHc-Yi-0VG">
-                                <rect key="frame" x="47" y="106" width="272" height="186"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NXX-mn-XNt">
                                 <rect key="frame" x="-4" y="20" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -680,6 +679,10 @@
                                     <navigationItem title="Login" id="qlP-EP-pYu"/>
                                 </items>
                             </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UHc-Yi-0VG">
+                                <rect key="frame" x="51" y="105" width="272" height="186"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
