--- a/DonationTracker/DonationTracker/Base.lproj/Main.storyboard
+++ b/DonationTracker/DonationTracker/Base.lproj/Main.storyboard
@@ -708,7 +708,7 @@
         <!--LoginScene-->
         <scene sceneID="vtm-xk-bkW">
             <objects>
-                <viewController title="LoginScene" id="gLD-8b-5EM" sceneMemberID="viewController">
+                <viewController title="LoginScene" id="gLD-8b-5EM" customClass="LoginViewController" customModule="DonationTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oJm-ix-4pG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -778,7 +778,7 @@
                                         <rect key="frame" x="129" y="0.0" width="161" height="72"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kzl-qY-CNc" userLabel="UsernameTextField">
-                                                <rect key="frame" x="0.0" y="0.0" width="161" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="161" height="22"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="f7l-UZ-613"/>
                                                     <constraint firstAttribute="width" constant="161" id="rbI-VG-h7e"/>
@@ -788,7 +788,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="csX-OT-MAk" userLabel="PasswordTextField">
-                                                <rect key="frame" x="0.0" y="50" width="161" height="22"/>
+                                                <rect key="frame" x="0.0" y="42" width="161" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="3sT-Kf-0j5"/>
                                                     <constraint firstAttribute="width" constant="161" id="Tzc-ad-4Ro"/>
@@ -810,6 +810,11 @@
                         <viewLayoutGuide key="safeArea" id="b9y-Lp-I9F"/>
                     </view>
                     <navigationItem key="navigationItem" id="Sne-bn-5BH"/>
+                    <connections>
+                        <outlet property="logInButton" destination="d1Y-uw-uMa" id="wXo-9u-48x"/>
+                        <outlet property="password" destination="csX-OT-MAk" id="rph-Zx-PFK"/>
+                        <outlet property="username" destination="Kzl-qY-CNc" id="VIK-1V-B1t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wng-H4-qDB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
